--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,11 +137,12 @@ android {
 }
 
 dependencies {
-    compile project(':lottie-react-native')
     compile project(':react-native-vector-icons')
+    compile project(':react-native-maps')
     compile project(':react-native-gesture-handler')
+    compile project(':lottie-react-native')
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    implementation "com.android.support:appcompat-v7:26.0.0"
     implementation "com.facebook.react:react-native:+"  // From node_modules
 }
 
