--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,12 +137,18 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:design:27.1.0'
+    implementation(project(':react-native-maps')){
+        exclude group: 'com.google.android.gms', module: 'play-services-base'
+        exclude group: 'com.google.android.gms', module: 'play-services-maps'
+    }
+    implementation 'com.google.android.gms:play-services-base:10.0.1'
+    implementation 'com.google.android.gms:play-services-maps:10.0.1'
     compile project(':react-native-vector-icons')
-    compile project(':react-native-maps')
     compile project(':react-native-gesture-handler')
     compile project(':lottie-react-native')
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.android.support:appcompat-v7:26.0.0"
+    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
 }
 
