--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:allowBackup="false"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme.Launcher">
       <meta-data
          android:name="com.google.android.geo.API_KEY"
          android:value="AIzaSyD9qUUYDGDvIoE6L-3ghDkBrjz7CY1Gqfc"
